# berserk-backend

./: .gitignore  .pre-commit-config.yaml  berserk-config.yaml  manage.py  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
common/: constants.py  enums.py  functions.py  request.py  validators.py
config/: asgi.py  urls.py  wsgi.py
config/api/v1/: .gitkeep
config/settings/: __init__.py  development.py
docker/non-production/: Dockerfile  docker-compose.yml  packages.txt
hooks/: check_commit_msg.py
kit/conf/: __init__.py  config.py  environ.py  helpers.py  parser.py  types.py
kit/views/: constants.py  decorators.py  exceptions.py  fields.py  helpers.py  openapi.py  permissions.py  serializers.py  status.py  types.py  views.py
modules/accounts/base/: apps.py
modules/circle/: apps.py  choices.py
modules/circle/fixtures/: employee.py
modules/circle/models/: __init__.py
modules/core/: apps.py  cache.py  choices.py  enums.py  types.py
modules/core/api/v1/: auth.py  register.py  send_otp.py
modules/core/api/v1/user/<int:id>/: __init__.py
modules/core/fixtures/: __init__.py  dropdown.py
modules/core/management/commands/: createdb.py
modules/core/models/: __init__.py  base.py  common.py  user.py
modules/core/services/: auth.py  otp.py  user.py
modules/hr/base/: apps.py
modules/hr/base/api/v1/: auth.py
modules/hr/base/fixtures/: __init__.py
modules/hr/base/models/: __init__.py
modules/hr/separation/: apps.py
